--- a/configs/model_config.yaml
+++ b/configs/model_config.yaml
@@ -1,9 +1,9 @@
 # configs/model_config.yaml
-in_channels: 4        # BraTS tiene 4 modalidades (FLAIR, T1w, T1gd, T2w)
-out_channels: 4       # Fondo (0) + 3 subregiones del tumor
-channels: [16, 32, 64, 128, 256] # Canales en cada nivel de la U-Net
-strides: [2, 2, 2, 2]            # Reducción espacial
+in_channels: 4        # Input modalities: 4 channels (FLAIR, T1w, T1gd, T2w)
+out_channels: 4       # Output classes: 1 background (0) + 3 tumor sub-regions
+channels: [16, 32, 64, 128, 256] # Feature map channels across U-Net encoder/decoder levels
+strides: [2, 2, 2, 2]            # Spatial downsampling strides
 learning_rate: 1e-4
 weight_decay: 1e-5
-roi_size: [96, 96, 96] # Debe coincidir con el patch_size de data_config
-sw_batch_size: 4       # Cuántos parches procesar en paralelo durante la inferencia de ventana
+roi_size: [96, 96, 96] # Must strictly match the 'patch_size' defined in data_config
+sw_batch_size: 4       # Number of parallel patches to process during sliding window inference
